--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="intro_main">
                         <h2 class="intro font_w_font_s fade_up">intro</h2>
                     </div>
-                    <h2 class="djomla font_w_font_s fade_up">Few intro words from me</h2>
+                    <h2 class="djomla font_w_font_s fade_up">Intro words</h2>
                     <h3 class="passionate font_w_font_s1 fade_up">
 
                         I am a seasoned programmer with over 15 years of experience, and a decade of leadership as a team lead manager and technical director.
